ubah minor di 8g exercises

--- a/exercises/exc-8/8g.html
+++ b/exercises/exc-8/8g.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>latihan object dan fnction</title>
+    <title>latihan object dan function</title>
   </head>
 
   <body>
